tests/ui/bad-not.stderr
error: expected `(` after `not`
 --> $DIR/tests/ui/bad-not.rs:1:20
  |
1 | #[rustversion::any(not)]
  |                    ^^^

error: expected `(`
 --> $DIR/tests/ui/bad-not.rs:4:23
  |
4 | #[rustversion::any(not, not)]
  |                       ^
